add paging for topic
