# src/main/java/pl/polsl/projectmanagementsystem/controller/TopicController.java
@@ -3,18 +3,22 @@ package pl.polsl.projectmanagementsystem.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.RestController;;
 import pl.polsl.management.api.controller.TopicApi;
-import pl.polsl.management.api.model.TopicRequestModelApi;
-import pl.polsl.management.api.model.TopicResponseModelApi;
+import pl.polsl.management.api.model.TopicFindResponseModelApi;
+import pl.polsl.management.api.model.TopicPostRequestModelApi;
+import pl.polsl.management.api.model.TopicPostResponseModelApi;
+import pl.polsl.projectmanagementsystem.dto.FindResultDto;
+import pl.polsl.projectmanagementsystem.dto.SearchDto;
 import pl.polsl.projectmanagementsystem.dto.TopicDto;
 import pl.polsl.projectmanagementsystem.mapper.TopicMapper;
+import pl.polsl.projectmanagementsystem.model.Topic;
 import pl.polsl.projectmanagementsystem.service.TopicService;
 
 import javax.annotation.security.RolesAllowed;
-import java.util.List;
 import java.util.stream.Collectors;
 
 
@@ -27,18 +31,26 @@ public class TopicController implements TopicApi {
 
     @CrossOrigin
     @Override
-    @RolesAllowed("user")
-    public ResponseEntity<TopicResponseModelApi> addNewTopic(TopicRequestModelApi topicRequestModelApi) {
+    @RolesAllowed("lecturer")
+    public ResponseEntity<TopicPostResponseModelApi> addNewTopic(TopicPostRequestModelApi topicRequestModelApi) {
         TopicDto result = topicService.addNewTopic(topicMapper.mapModelApiToDto(topicRequestModelApi));
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String currentPrincipalName = authentication.getName();
 
         return new ResponseEntity<>(topicMapper.mapDtoToModelApi(result), HttpStatus.OK);
     }
 
     @CrossOrigin
     @Override
-    public ResponseEntity<List<TopicResponseModelApi>> getAllTopics() {
-        List<TopicDto> result = topicService.getAllTopics();
+    @RolesAllowed({"user", "lecturer", "admin"})
+    public ResponseEntity<TopicFindResponseModelApi> getAllTopics(Long page, Long limit) {
+        SearchDto searchDto = SearchDto.builder()
+                .page(page)
+                .limit(limit)
+                .build();
 
-        return new ResponseEntity<>(result.stream().map(topicMapper::mapDtoToModelApi).collect(Collectors.toList()), HttpStatus.OK);
+        FindResultDto<Topic> findResult= topicService.getAllTopics(searchDto);
+
+        return new ResponseEntity<>(topicMapper.mapDtoToModelApi(findResult), HttpStatus.OK);
     }
 }
