# src/main/java/pl/polsl/projectmanagementsystem/dto/FindResultDto.java
@@ -1,0 +1,18 @@
+package pl.polsl.projectmanagementsystem.dto;
+
+import lombok.*;
+
+import java.util.List;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class FindResultDto<T> {
+
+    private Long startElement;
+    private Long totalCount;
+    private Long count;
+    private List<T> results;
+}
